--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="rayas2">'</div>
             <p>
-                Curso preparatorio para grandes eventos <br>
+                Curso preparatorio para grandes eventos
                 Universidad en Río de Janeiro, Estado de Río de Janeiro
             </p>
     </article>
@@ -90,7 +90,7 @@
     </article>
     <div class="rayas2">'</div>
         <p>
-            SUSHI & TEMAKERIA. JAPA  MIX <br>
+            SUSHI & TEMAKERIA. JAPA  MIX
             GARÇONETE
         </p>
     </article>
@@ -120,7 +120,7 @@
           <div class="col-4">
             <img src="img/amazonas.jpg" class="t-img">
             <h4><strong>Bio-diversidad</strong></h4>
-            <p class="pin">>Se encante com a biodiversidade que só se encontra no esplêndido Amazonas <br>
+            <p class="pin">Se encante com a biodiversidade que só se encontra no esplêndido Amazonas <br>
               O santuario ecologico mais importante do planeta.</p>
             </a>
           </div>
